# scia

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  main.cpp
app_composition/: CMakeLists.txt
app_composition/include/: DIContainer.hpp  UIComposer.hpp
app_composition/src/: DIContainer.cpp  UIComposer.cpp
person/: CMakeLists.txt
person/include/application/: PersonCommandService.hpp  PersonQueryService.hpp
person/include/application/command/: CreatePersonCommand.hpp  DeletePersonCommand.hpp
person/include/application/composition/: PersonContext.hpp
person/include/application/dto/: PersonDto.hpp
person/include/application/port/: IPersonCommandService.hpp  IPersonQueryService.hpp
person/include/application/query/: FindAllPersonQuery.hpp  FindByIdPersonQuery.hpp
person/include/domain/aggregate/: Person.hpp
person/include/domain/repository/: IPersonRepository.hpp
person/include/infrastructure/sqlite/: PersonMapper.hpp  SqlitePersonRepository.hpp
person/include/ui/viewmodel/: PersonViewModel.hpp  QmlPerson.hpp
person/src/application/: PersonCommandService.cpp  PersonQueryService.cpp
person/src/application/composition/: PersonContext.cpp
person/src/domain/: PersonFactory.cpp
person/src/domain/aggregate/: Person.cpp
person/src/infrastructure/sqlite/: SqlitePersonRepository.cpp
person/src/ui/viewmodel/: PersonViewModel.cpp  QmlPerson.cpp
qml/: CMakeLists.txt
qml/Component/: Page.qml  PageLoader.qml  UIMessageOverlay.qml  UIToast.qml
qml/Layout/: ContentArea.qml  Main.qml  TopPanel.qml
qml/Page/: Home.qml
qml/Page/Person/: Person.qml  PersonList.qml
resources/: resources.qrc
resources/db/fixtures/: 001_seed_data.sql
resources/db/migrations/: 001_init.sql
shared/: CMakeLists.txt
shared/include/application/composition/: BaseContext.hpp
shared/include/application/cqrs/: ICommand.hpp  ICommandHandler.hpp  IQuery.hpp  IQueryHandler.hpp
shared/include/application/port/: IDatabaseConnection.hpp  IDatabaseInitializer.hpp  ILogger.hpp
shared/include/domain/enum/: LogLevel.hpp
shared/include/domain/vo/: Id.hpp
shared/include/infrastructure/: CompositeLogger.hpp  ConsoleLogger.hpp  FileLogger.hpp
shared/include/infrastructure/sqlite/: RowReader.hpp  ScopedTransaction.hpp  SqliteDatabaseConnection.hpp  SqliteDatabaseInitializer.hpp  SqliteInitializerRepository.hpp  SqliteRepositoryBase.hpp
shared/include/ui/: PageNames.hpp
shared/include/ui/qml/: QmlBaseEntity.hpp
shared/include/ui/qml/component/: QmlRoute.hpp  QmlRouterManager.hpp  QmlUtilities.hpp  Router.hpp  UIMessage.hpp
shared/include/ui/viewmodel/: QmlBaseViewModel.hpp
shared/src/infrastructure/: ConsoleLogger.cpp  FileLogger.cpp
shared/src/infrastructure/sqlite/: RowReader.cpp  SqliteDatabaseConnection.cpp
shared/src/ui/qml/component/: QmlRoute.cpp  QmlRouterManager.cpp  QmlUtilities.cpp  Router.cpp  UIMessage.cpp
shared/src/ui/viewmodel/: QmlBaseViewModel.cpp
